[package]
name = "merkle-trie-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.5"
hex = "0.4"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
